<resources>
    <string name="app_name">Musician</string>
    <string name="nav_home">Home</string>
    <string name="nav_mess">Messages</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_req_friend">Frienship</string>
    <string name="nav_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
