<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
    <item
        android:id="@+id/nav_req_friend"
        android:icon="@drawable/ic_friends"
        android:title="@string/nav_req_friend"
        />
    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_notifications"
        android:title="@string/nav_notifications" />
    <item
        android:id="@+id/nav_messages"
        android:icon="@drawable/ic_message"
        android:title="@string/nav_mess" />
    <!--<item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/nav_logout"/>-->
</menu>